<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Api21stub</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <string name="device_screen_label">Device: %s</string>
    <string name="device_screen">Phone</string>

    <string name="btn_home_msg">Don\'t click me</string>
    <string name="btn_home_toast">Button clicked</string>

</resources>
